# flappy-rust

./: .gitignore  Cargo.toml  README.md  TODO.md  error_log.txt  error_log_2.txt  fix_plan.md  rules.md
assets/fonts/: .gitkeep
src/: ai_components.rs  ai_resources.rs  ai_systems.rs  components.rs  constants.rs  main.rs  nn.rs  plugin.rs  resources.rs  setup.rs  systems.rs  ui.rs
src/ai/: ai_bird.rs  genetic_algorithm.rs  mod.rs  neural_network.rs
