[package]
name = "flappy-rust"
version = "0.1.0"
edition = "2021"
 
[dependencies]
bevy = { version = "0.14", features = ["dynamic_linking"] }
bevy_egui = "0.28"
rand = "0.8"
 
# Enable a small amount of optimization for release mode
[profile.release]
opt-level = 3
 
# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1
 
# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
